# NoiseCut

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  run.sh
.github/workflows/: build-test.yml
docs/: 10D_example  Makefile  conf.py  example.ipynb  homepage.md  index.md  inputevents_dictionary.csv  make.bat  observation_dictionary.csv  requirements.txt
docs/data/: 10D_E1  10D_E2  10D_E3  10D_E4  10D_E5  10D_E6  11D_E1  11D_E2  11D_E3  11D_E4  11D_E5  11D_E6  12D_E1  12D_E2  12D_E3  12D_E4  12D_E5  7D_synthetic_data_manual  8D_E1  8D_E2  8D_E3  8D_E4  8D_E5  8D_E6  9D_E1  9D_E2  9D_E3  9D_E4  9D_E5  9D_E6
docs/notebooks/: 10D_example  Classification with reduced training data.ipynb  Classification_with_reduced_training_data.ipynb  Generation_of_synthetic_data.ipynb  Noise-tolerant classification.ipynb  Noise-tolerant_classification.ipynb  Usage_example_of_NoiseCut.ipynb  example.ipynb  simple_demo.ipynb
docs/notebooks/Noise-tolerant_classification_results/: metric_dict_NC  metric_dict_NC.json  metric_dict_NeuralNetwork  metric_dict_RandomForest  metric_dict_SVM  metric_dict_XGB  metric_dict_XGB.json  results_NC.json  results_XGB.json
src/noisecut/max_cut/: base_maxcut.py  solvers.py
src/noisecut/model/: noisecut_coder.py  noisecut_model.py
src/noisecut/tree_structured/: base.py  base_structured_data.py  binary_function.py  data_manipulator.py  sample_generator.py  structured_data.py
tests/test_max_cut/: data.py  test_base_maxcut.py  test_solvers.py
tests/test_max_cut/local_solver/instances/: g05_60.0  g05_60.1
tests/test_max_cut/local_solver/output_of_instances/: g05_60.0  g05_60.1
tests/test_model/: test_noisecut.py
tests/test_model/toy_example/: toy_example_complete  toy_example_more_training  toy_example_test  toy_example_training
tests/test_tree_structured/: test_base.py  test_base_structured_data.py  test_binary_function.py  test_data_manipulator.py  test_sample_generator.py  test_structured_data.py
