[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "noisecut"
version = "v0.1.13"
description = "A Python Package for Noise-Tolerant Classification of Binary Data using Prior Knowledge Integration and Max-Cut Solutions"
readme = "README.md"
authors = ["Hedieh Mirzaieazar, Moein E. Samadi <moein.samadi@rwth-aachen.de>"]
repository = "https://github.com/JRC-COMBINE/NoiseCut"
documentation = "https://noisecut.readthedocs.io/en/latest/"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "*"
pandas = "*"
scipy = "*"
cplex = "*"
docplex = "*"

[project]
name = "noisecut"
version = "v0.1.13"
description = "A Python Package for Noise-Tolerant Classification of Binary Data using Prior Knowledge Integration and Max-Cut Solutions"
readme = "README.md"
license = {text = "GPLv3"}
authors = [
    {name = "Hedieh Mirzaieazar, Moein E. Samadi", email = "moein.samadi@rwth-aachen.de"}
]
requires-python = ">=3.9"
dependencies = [
  'numpy',
  'pandas',
  'scipy',
  'cplex',
  'docplex',
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]


# docs: https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#dynamic-metadata
[tool.setuptools.dynamic]
version = { file = "version.txt" }

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
filterwarnings = [
    "ignore::UserWarning",
]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
multi_line_output = "VERTICAL_HANGING_INDENT"
force_grid_wrap = 2
line_length = 79

[tool.ruff]
select = ["E", "F"]

ignore = []

unfixable = []
line-length = 79

[tool.numpydoc_validation]
checks = [
    "all",   # report on all checks, except the below
    "ES01",  # Extended description
    "SA01", # See Also section not found
    "EX01",  # No examples section found
]

exclude = [
  '\.__init__$',
  '\.__repr__$',
  'test*',
  '__init__',
  'data',
  'conf',
]

[tool.mypy]
ignore_missing_imports = true
